# rust-wavefront

./: Cargo.toml  build.rs
assets/spv/: film-hdrfilm-put.spv  generate_camera_rays.spv  independent-IndependentSampler-next_1d.spv  independent-IndependentSampler-next_2d.spv  intersect_closest.spv  put_film.spv  rchit.spv  rmiss.spv  rmiss_shadow.spv  sampler-independent-next_1d.spv  sampler-independent-next_2d.spv  sampler-independent-seed.spv  samplers-independent-next_1d.spv  samplers-independent-next_2d.spv  samplers-independent-seed.spv  shaders.json  smaple_bsdf.spv  update_film.spv  update_state.spv
shaders/builder/: Cargo.toml
shaders/builder/src/: main.rs
shaders/common/: Cargo.toml
shaders/common/src/: lib.rs  sampler.rs  workitems.rs  workqueue.rs
shaders/common/src/sampler/: independent.rs
shaders/rust-shaders/: Cargo.toml
shaders/rust-shaders/src/: independent.rs  lib.rs
shaders/rust-shaders/src/film/: hdrfilm.rs  mod.rs
shaders/rust-shaders/src/sampler/: independent.rs
src/: array.rs  integrator.rs  main.rs  pipelines.rs  render.rs  renderer.rs  scene.rs  workqueue.rs
src/bsdf/: diffuse.rs  mod.rs
src/film/: hdrfilm.rs
src/integrators/: path.rs
src/loaders/: gltf.rs
src/sampler/: independent.rs
src/samplers/: independent.rs  mod.rs
